[build-system]
requires = [
    "setuptools",
    "wheel",
    "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "rin-curium"
description = "rin-curium is a packages intended to resolve internodes communication"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["communication", "command"]
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

dynamic = ["version", "dependencies"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.dynamic]
version = { attr = "rin.curium.__version__" }
dependencies = { file = "requirements.txt" }